--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "typescript": "^4.9.3"
   },
   "name": "darcjs",
-  "description": "The official JavScript/TypeScript SDK for DARC",
-  "version": "0.0.1",
+  "description": "The official JavaScript client and SDK for Project DARC (Decentralized Autonomous Regulated Company), and the compiler and runtime for By-Law Script.",
+  "version": "0.0.2",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": {
