--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/Project-DARC/darc.js.git"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "test": "mocha -r ts-node/register tests/**/*.ts --timeout 100000",
     "build": "pnpm test && tsc --build"
   },
   "author": "",
