--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "strict": true,
+    "moduleResolution":"node",
   },
-  "include": ["src"]
+  "include": ["src"],
+
 }
